src/objects/Apttus__DocAssemblyComponent__c.object
<CustomObject>
    <description>Represents a single component in a document assembly rule</description>
    <fields>
        <fullName>Apttus__AttachmentId__c</fullName>
        <description>Id of the attachment</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Id of the attachment</inlineHelpText>
        <label>Attachment Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ComponentType__c</fullName>
        <description>Type of the component. Clause considers clause document, Attachment (Id) considers a hardcoded attachment id, Attachment (Object/Field) considers attachment id in a field, Parent (Object/Field) considers the first attachment in the parent represented by the field, Content (Object/Field) considers the raw content of that field.</description>
        <inlineHelpText>Clause = clause document, Attachment (Id) = hardcoded attachment id, Attachment (Object/Field) = attachment id in a field, Parent (Object/Field) = first attachment in the parent represented by the field, Content (Object/Field) =  raw content of the field.</inlineHelpText>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clause</fullName>
                    <default>true</default>
                    <label>Clause</label>
                </value>
                <value>
                    <fullName>Attachment (Id)</fullName>
                </value>
                <value>
                    <fullName>Attachment (Object/Field)</fullName>
                </value>
                <value>
                    <fullName>Parent (Object/Field)</fullName>
                </value>
                <value>
                    <fullName>Content (Object/Field)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContentFieldType__c</fullName>
        <description>Type of the content field when the ComponentType is Content (Object/Field)</description>
        <inlineHelpText>Type of the content field when the ComponentType is Content (Object/Field)</inlineHelpText>
        <label>Content Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>IMAGE</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>TEXT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the content for the component</description>
        <inlineHelpText>ID of the content for the component</inlineHelpText>
        <label>Content</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Doc Assembly Components</relationshipLabel>
        <relationshipName>DocAssemblyComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldName__c</fullName>
        <description>Name of the field that leads to the target component</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the field that leads to the target component</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InsertPageBreak__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inserts a page break after the component is inlined</description>
        <inlineHelpText>Inserts a page break after the component is inlined</inlineHelpText>
        <label>Insert Page Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__RuleId__c</fullName>
        <description>ID of the associated rule</description>
        <inlineHelpText>ID of the associated rule</inlineHelpText>
        <label>Rule</label>
        <referenceTo>Apttus__DocAssemblyRule__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The component sequence</description>
        <inlineHelpText>The component sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>The component type</description>
        <inlineHelpText>The component type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Logo</fullName>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Footer</fullName>
                </value>
                <value>
                    <fullName>Terms and Conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Doc Assembly Component</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Component Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Assembly Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>